# CNN-Acceleration

./: .gitignore  Dockerfile  LICENSE  README.md  rai-build.yml
cmake/modules/: FindCUDA.cmake  FindEnableCxx11.cmake
cuda_implementation/: CMakeLists.txt
cuda_implementation/data/: model.hdf5
cuda_implementation/profile/: Sequential CNN.docx  analysis.nvprof  profile.sh  timeline.nvprof
cuda_implementation/src/: main.cu
data/: test10.hdf5  test100.hdf5  test2.hdf5
fpgaOpenCL_implementation/: CMakeLists.txt
fpgaOpenCL_implementation/cmake/modules/: FindRange.cmake
fpgaOpenCL_implementation/common/: readme.css
fpgaOpenCL_implementation/common/inc/AOCLUtils/: opencl.h  scoped_ptrs.h
fpgaOpenCL_implementation/common/src/AOCLUtils/: opencl.cpp
fpgaOpenCL_implementation/implementation/: Makefile  README  README.html
fpgaOpenCL_implementation/implementation/host/src/: cnn.h  main.cpp
fpgaOpenCL_implementation/src/: cnn.cl  cnn.h  config.cmake  range.hpp
openCL_implementation/: CMakeLists.txt
openCL_implementation/src/: cnn.cl  cnn.h  config.cmake  main.cl  main.cpp
src/: config.cmake  range.hpp  utils.hpp
